cmake_minimum_required(VERSION 3.28)
project(set3P3)

set(CMAKE_CXX_STANDARD 17)

add_executable(set3p1 set3p1.cpp)
add_executable(set3p2 set3p2.cpp)
add_executable(set3P3 set3p3.cpp)
add_executable(set3p4 set3p4.cpp)
add_executable(set3p5 set3p5.cpp)
add_executable(set3p6 set3p6.cpp)
add_executable(set3a2i set3a2i.cpp)
add_executable(set3a1i set3a1i.cpp)
